<resources>

<<<<<<< HEAD
    <string name="app_name">Pubrundan</string> 
=======
    <string name="app_name">Pubrundan</string>
    <string name="api_map_key">0n_WUXbhVEKfU4SZhO9Hhixy7M617h_k4iBRiSA</string>
    <string name="goLabel">Show the Map</string>
>>>>>>> 368d9c8d2f2579eb18102e53e045dca03ee590bb
    <string name="ja_pripps_info">J.A. Pripps Pub och Café är den naturliga samlingsplatsen mitt i Kårhuset.</string>
    <string name="campus">Campus:</string>
    <string name="opening_hours">Öppettider:</string>
    <string name="house">Hus:</string>
    <string name="pub_logo">Pub logo</string>
    <string name="house_edit">EDIT</string>
    <string name="gangnam_style">Gangnam Style</string>
    <string name="basen">Basen</string>
    <string name="bulten">Bulten</string>
    <string name="club_avancez">Club Avancez</string>
    <string name="focus">Focus</string>
    <string name="fortnox">FortNOx</string>
    <string name="gasquen">Gasquen</string>
    <string name="gastown">GasTown</string>
    <string name="goldeni">GoldenI</string>
    <string name="hubben">Hubben 2.1</string>
    <string name="ja_pripps">J.A. Pripps</string>
    <string name="jarnvagspub">Järnvägspub</string>
    <string name="kajsabaren">Kajsabaren</string>
    <string name="pubf">Pub F</string>
    <string name="pubp">Pub P</string>
    <string name="roda_rummet">Röda rummet</string>
    <string name="sigurdafiket">Sigurd/A-fiket</string>
    <string name="spritkoket">Spritköket</string>
    <string name="winden">Winden</string>
    <string name="zaloonen">Zaloonen</string>
    <string name="lindholmen">Lindholmen</string>
    <string name="johanneberg">Johanneberg</string>
<<<<<<< HEAD
    <string name="opening_hours_basen">16:00 &#8211; 01:00</string>  <!-- &#8211; = "-" -->
=======
    <string name="opening_hours_basen">16:00 &#8211; 01:00</string>
 <!-- &#8211; = "-" -->
>>>>>>> 368d9c8d2f2579eb18102e53e045dca03ee590bb
    <string name="ja_pripps_main_info">PubA verkar för A-sektionens sociala intressen genom att sköta om sektionspuben Röda Rummet där vi arrangerar pubar och andra sociala aktiviteter.</string>
    <string name="ja_pripps_more_info">J.A. Pripps Pub och Café är den naturliga samlingsplatsen mitt i Kårhuset.
        Under dagtid finns allt du behöver för en trevlig fikastund. Under eftermiddagen öppnar ölkranarna
        och framåt kvällen serverar köket god mat till priser som passar teknologstudentens plånbok.</string>
    <string name="feedbacktitle">Enter feedback details</string>
    <string name="feedbackname">Enter name</string>
    <string name="feedbackemail">Enter email</string>
    <string name="feedbacktype1">Suggestion</string>
    <string name="feedbacktype2">Bug</string>
    <string name="feedbacktype3">Praise</string>
    <string name="feedbacktype">Select feedback type</string>
    <string name="feedbackbody">Feedback details goes here</string>
    <string name="feedbackresponse">Would you like a response?</string>
    <string name="feedbacksendbutton">Send feedback</string>
    <string name="shareTitle">Share this app via</string>
    <string name="shareLink">Jag tycker du ska kolla in Androidappen Pubrundan på Google Play här:</string>
    <string name="version">0.3</string>
    <string name="developers">TAREA</string>
    <string name="licence">GPL</string>
    <string name="iconshock"><a href="http://www.iconshock.com" rel="nofollow">Original icon is made by Iconshock</a></string>
    <string name="campusJohanneberg">Campus Johanneberg</string>
    <string name="campusLindholmen">Campus Lindholmen</string>
<<<<<<< HEAD

    <string name="version">0.3</string>
    <string name="Developers">TAREA</string>
    <string name="Licence">GPL</string>
    <string name="iconshock"><a href="http://www.iconshock.com" rel="nofollow">Original icon is made by Iconshock</a></string>

=======
>>>>>>> 394121e74c5a21d07bd01f89db0595e1323f526f

</resources>