<?xml version="1.0"	encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/share"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
        <TextView  
	    	android:id="@+id/TextViewTitle"  
	    	android:layout_width="wrap_content"  
	    	android:layout_height="wrap_content"  
	    	android:text="@string/feedbacktitle"  
	    	android:textSize="10pt">  
		</TextView> 
		<EditText  
		    android:id="@+id/EditTextName" 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"  
		    android:hint="@string/feedbackname"  
		    android:inputType="textPersonName">  
		</EditText> 
		<EditText  
		    android:id="@+id/EditTextEmail"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"  
		    android:hint="@string/feedbackemail"  
		    android:inputType="textEmailAddress">  
		</EditText>  
		<Spinner  
		    android:id="@+id/SpinnerFeedbackType"
		    android:layout_width="fill_parent"    
		    android:layout_height="wrap_content"  
		    android:prompt="@string/feedbacktype" 
		    android:entries="@array/feedbacktypelist">  
		</Spinner>  
		<EditText  
		    android:id="@+id/EditTextFeedbackBody"  
		    android:layout_height="wrap_content"  
		    android:hint="@string/feedbackbody"  
		    android:inputType="textMultiLine"  
		    android:lines="5"  
		    android:layout_width="fill_parent">  
		</EditText>  
		<CheckBox  
		    android:id="@+id/CheckBoxResponse"  
		    android:layout_height="wrap_content"  
		    android:text="@string/feedbackresponse"  
		    android:layout_width="fill_parent">
		</CheckBox>  
		<Button
		    android:id="@id/ButtonSendFeedback"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/feedbacksendbutton"
		    android:onClick="sendFeedback">
		</Button>
    </LinearLayout>
</ScrollView>