<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:id="@+id/maintitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/spritkoket"
            android:textColor="@color/prippsblue"
            android:textSize="25dp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_gravity="fill_horizontal"
            android:background="#DADADA" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="10dp"
        android:paddingTop="70dp" >
    </LinearLayout>

    <ImageView
        android:id="@+id/list_image"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/pub_logo"
        android:src="@drawable/icon_spritkoket" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/list_image"
        android:layout_marginLeft="50dp"
        android:paddingTop="20dp"
        android:text="@string/opening_hours"
        android:textColor="@color/prippsblue"
        android:textSize="17dp"
        android:textStyle="bold"
        android:typeface="sans" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/title"
        android:layout_below="@+id/title"
        android:layout_marginLeft="50dp"
        android:paddingTop="5dp"
        android:text="@string/campus"
        android:textColor="@color/prippsblue"
        android:textSize="17dp"
        android:textStyle="bold"
        android:typeface="sans" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/TextView01"
        android:layout_below="@+id/TextView01"
        android:layout_marginLeft="50dp"
        android:paddingTop="5dp"
        android:text="@string/house"
        android:textColor="@color/prippsblue"
        android:textSize="17dp"
        android:textStyle="bold"
        android:typeface="sans" />

    <TextView
        android:id="@+id/TextView09"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="70dp"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:text="@string/ja_pripps_main_info"
        android:textColor="@color/black"
        android:textSize="13dp"
        android:textStyle="italic"
        android:typeface="serif" />

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView03"
        android:layout_alignBottom="@+id/TextView03"
        android:layout_alignParentRight="true"
        android:layout_marginRight="50dp"
        android:text="@string/house_edit"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView01"
        android:layout_alignBottom="@+id/TextView01"
        android:layout_alignParentRight="true"
        android:layout_marginRight="50dp"
        android:text="@string/johanneberg"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/title"
        android:layout_alignBottom="@+id/title"
        android:layout_alignParentRight="true"
        android:layout_marginRight="50dp"
        android:text="@string/opening_hours_basen"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="normal" />

</RelativeLayout>